[gd_scene load_steps=3 format=3 uid="uid://d25n1epq705uj"]

[ext_resource type="Script" uid="uid://bo0o70mlar04j" path="res://Scripts/pause_menu.gd" id="1_i2531"]
[ext_resource type="PackedScene" uid="uid://b1qxs5x83su66" path="res://Menus/settings_menu.tscn" id="2_ik086"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2531")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Resume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="Settings" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Settings_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="Quit" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Quit"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("2_ik086")]
visible = false

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume/Resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings/Settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit/Quit_button" to="." method="_on_quit_button_pressed"]
